log
Thu 25 Apr 2024 03:17:40 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
006ae70
Thu 25 Apr 2024 03:19:39 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 30/70
e0b7085
Thu 25 Apr 2024 03:21:20 PM UTC: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  6|3
total_score: 40/70
375ca81
Thu 25 Apr 2024 03:26:19 PM UTC: 
 hashmap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  6|3
total_score: 40/70
c6ebd10
Thu 25 Apr 2024 03:29:23 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
36c3f77
Thu 25 Apr 2024 03:30:49 PM UTC: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
a2a1306
Thu 25 Apr 2024 03:33:33 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
fe7fc4f
Thu 25 Apr 2024 03:36:42 PM UTC: 
 hashmap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  14|1
total_score: 60/70
d1a3955
Thu 25 Apr 2024 03:45:37 PM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  0|0
9f261a9
Thu 25 Apr 2024 03:46:04 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
09286ee
Thu 25 Apr 2024 03:54:52 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:147:20: error: expected ‘;’ before ‘return’
  147 |   map->current = -1
      |                    ^
      |                    ;
  148 |   return NULL;
      |   ~~~~~~            
hashmap.c:149:1: error: control reaches end of non-void function [-Werror=return-type]
  149 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4fd00ca
Thu 25 Apr 2024 03:55:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
7274a54
Thu 25 Apr 2024 03:56:30 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
1132486
Thu 25 Apr 2024 03:58:08 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
00affa7
Thu 25 Apr 2024 04:00:01 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:156:1: error: control reaches end of non-void function [-Werror=return-type]
  156 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bd87369
Thu 25 Apr 2024 04:01:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
3e148b7
Thu 25 Apr 2024 04:02:16 PM UTC: 
 hashmap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  16|1
total_score: 60/70
51ca594
Thu 25 Apr 2024 04:06:44 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:140:10: error: passing argument 1 of ‘printf’ makes pointer from integer without a cast [-Werror=int-conversion]
  140 |   printf(pos);
      |          ^~~
      |          |
      |          int
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdio.h:906,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/stdio2.h:84:32: note: expected ‘const char * restrict’ but argument is of type ‘int’
   84 | printf (const char *__restrict __fmt, ...)
      |         ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
In file included from test.c:4:
hashmap.c:140:3: error: format not a string literal and no format arguments [-Werror=format-security]
  140 |   printf(pos);
      |   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b4a0d8c
